kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
#    kubernetes.io/tls-acme: "true"
#    cert-manager.io/cluster-issuer: "letsencrypt-production"
#    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
  - host: shop.192.168.49.2.nip.io
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
